# aptos-testcontainer

./: Cargo.toml  Dockerfile  Makefile  README.md  amd.Dockerfile  arm.Dockerfile  init_accounts.sh
.github/workflows/: ci.yaml
contract-sample/: Move.toml
contract-samples/sample1/: Move.toml
contract-samples/sample2/libs/: Move.toml
contract-samples/sample2/verifier/: Move.toml
contract-samples/sample2/verifier/scripts/: script.move
contract-samples/sample2/verifier/sources/: fri_layer.move
src/: aptos_container.rs  config.rs  errors.rs  lib.rs  test_config.rs  test_utils.rs  utils.rs
