[package]
edition = "2021"
name = "aptos-testcontainer"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.71" }
base64 = "0.22.1"
config = { version = "0.14.0" }
log = "0.4.22"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0" }
testcontainers = { version = "0.22.0" }
thiserror = { version = "1.0.63" }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2.3.3"

[dev-dependencies]
ed25519-dalek = { version = "2.1.1" }
hex = "0.4.3"
test-log = { version = "0.2.16" }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[features]
testing = []
